--- a/assets/manual.html
+++ b/assets/manual.html
@@ -10,7 +10,7 @@ Sprained ankle
    <a href="manual2.html"> injury2</a> <br />
    <a href="manual3.html"> injury3</a> <br />
 </p>
-To treat a sprained ankle you have to call the FBI. 
+To treat a sprained ankle you have to do RICE. 
 
 
 </body>
