--- a/assets/manual.html
+++ b/assets/manual.html
@@ -1,17 +1,26 @@
 <html>
 <body>
-<h1>First Aid Manual <br />
-Sprained ankle
-</h1>
+<p style="font-size:200%"><a href="contents.html">Back</a><br /></p><br />
 
-<p style="font-size:200%">
-   <img align="right" src="anklesprain.gif"  />
-   <a href="manual.html"> Sprained ankle</a> <br />
-   <a href="manual2.html"> injury2</a> <br />
-   <a href="manual3.html"> injury3</a> <br />
-</p>
-To treat a sprained ankle you have to do RICE. 
+<h1>Sprained ankle</h1>
 
-
+<img align="right" src="anklesprain.gif"  />
+1. <u>Protect the sprained ankle</u> <br />
+This is quite simple, but amazingly common for people to forget. Don't walk on the sprained ankle, and protect it from further contact by immobilizing with a splint or brace. <br />
+<br />
+2. <u>REST</u> <br />
+Take a few days off of your feet. You don't have to be inactive, but be sure the ankle is being rested. Possible exercises you can do include swimming and cycling. <br />
+<br />
+3. <u>ICE</u> <br />
+This can be done several times a day for 15-20 minutes. This will keep the swelling to a minimum. Do NOT ice for more than 20 minutes, it will do more damage than good. <br />
+<br />
+4. <u>COMPRESSION</u> <br />
+This does not have to be all of the time, but particularly when your foot is not elevated it would be advisable. A simple Ace wrap is fine for light compression. <br />
+<br />
+5. <u>ELEVATE</u> <br />
+This will also help to minimize the swelling that takes place. A few pillows under the ankle should be fine to get the leg up enough while keeping the injured limb comfortable. <br />
+<br />
+6. <u>Seek professional help when needed</u> <br />
+While most ankle injuries are simple and heal naturally over a short time, some injuries are more severe and can necessitate more aggressive treatment. <br />
 </body>
 </html> 
