--- a/assets/manual2.html
+++ b/assets/manual2.html
@@ -1,17 +1,26 @@
 <html>
 <body>
+<p style="font-size:200%"><a href="contents.html">Back</a><br /></p><br />
 
-<h1>First Aid Manual <br />
-injury2
-</h1>
-
-<p style="font-size:200%">
-   <img align="right" src="anklesprain.gif"  />
-   <a href="manual.html"> Sprained ankle</a> <br />
-   <a href="manual2.html"> injury2</a> <br />
-   <a href="manual3.html"> injury3</a> <br />
-</p>
-This is injury 2. 
+<h1>Cut</h1>
+1. <u>Stop the bleeding</u><br />
+The first priority is to stop the wound from bleeding. This is done by applying firm pressure to the wound using a cloth or towel.<br />
+<br />
+2. <u>Clean the wound</u><br />
+Cleaning the wound is important to minimize the risk of infection and scarring. First rinse the wound with clean water, removing any dirt, gravel or glass. Clean the wound next with sterile gauze.<br />
+<br />
+3. <u>Prevent infection</u><br />
+The best way to prevent infection is to apply a topical antibiotic to the wound and cover it with a dressing. Studies show that applying a topical antibiotic can promote healing in eight days, as opposed to 13 days for wounds left untreated.<br />
+<br />
+4. <u>Close the wound</u><br />
+You can promote healing and minimize the potential for scarring by covering the wound. If the cut is small enough, simply cover the cut with a bandage or dressing. There are many ways to close wounds, and the best option will depend on the type and severity of the wound itself.<br />
+<ul>
+<li>Skinstrips are tape¡ªlike strips that hold the skin together. These are appropriate for small cuts.</li>
+<li>Stitches (or sutures) are used for deeper cuts. The stitches are used to sew the edges of the cut together.</li>
+<li>Steri-strips are used to close wounds on the face in those instances where stitches may leave a scar. Steri-strips or butterfly strips are thin and sticky, and usually fall off after a few days.</li>
+<li>Skin glue is a special adhesive that sticks together the edges of the wound and seals the skin for protection. Skin glue is not as effective on areas where there is a significant amount of skin movement.</li>
+<li>A liquid bandage forms a seal over the affected area. A significant advantage is that it can be used in areas that are difficult for an ordinary bandage to stay on. The seal is waterproof, promotes healing and helps protect against infection.</li>
+</ul>
 
 
 </body>
