--- a/assets/manual3.html
+++ b/assets/manual3.html
@@ -1,18 +1,22 @@
 <html>
 <body>
+<p style="font-size:200%"><a href="contents.html">Back</a><br /></p><br />
 
-<h1>First Aid Manual <br />
-injury3
-</h1>
+<h1>Concussion</h1>
 
-<p style="font-size:200%">
-   <img align="right" src="anklesprain.gif"  />
-   <a href="manual.html"> Sprained ankle</a> <br />
-   <a href="manual2.html"> injury2</a> <br />
-   <a href="manual3.html"> injury3</a> <br />
-</p>
-This is injury 3. 
-
+Any person who may have had a concussion needs to see a doctor. Some people have to stay in the hospital to be watched. Others can go home safely. People who go home still need to be watched closely for warning signs or changes in behavior. Call a doctor or seek emergency care right away if you are watching a person after a concussion and the person has:
+<ul>
+<li>A headache that gets worse or does not go away.</li>
+<li>Weakness, numbness, or decreased coordination.</li>
+<li>Repeated vomiting or nausea.</li>
+<li>Slurred speech.</li>
+<li>Extreme drowsiness or you cannot wake them.</li>
+<li>One pupil that is larger than the other.</li>
+<li>Convulsions or seizures.</li>
+<li>A problem recognizing people or places.</li>
+<li>Increasing confusion, restlessness, or agitation.</li>
+<li>Loss of consciousness.</li>
+</ul> 
 
 </body>
 </html> 
