tons of new images and edits

--- a/assets/manual.html
+++ b/assets/manual.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p style="font-size:200%"><a href="contents.html">Back</a><br /></p><br />
+<a href="contents.html"><-- </a>
 
 <h1>Sprained ankle</h1>
 
