--- a/assets/manual2.html
+++ b/assets/manual2.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-<p style="font-size:200%"><a href="contents.html">Back</a><br /></p><br />
+<a href="contents.html"><-- </a>
 
 <h1>Cut</h1>
 1. <u>Stop the bleeding</u><br />
